@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-27T08:10:00Z",
-  "count" : 10,
+  "timestamp" : "2022-08-27T16:09:24Z",
+  "count" : 5,
   "count_minmax" : [ 2, 12 ],
-  "count_decinc" : [ -2, +12 ],
+  "count_decinc" : [ -7, +12 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
