@@ -1,3 +1,11 @@
+2022-08-27T16:09:24Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2939862253
+* notice: last 14d: unq all: 1 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 134 1896 / 135 1906
+* notice: next accum: outdated-unq outdated-all / unq all: 134 1896 / 135 1901
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -5 / +1 +12 -0 -7 / 1 5
+* notice: removed / changed dates: [] / [2022-08-13]
+
 2022-08-27T08:10:00Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2938552006
 * notice: last 14d: unq all: 1 10
